tests-integration/fixtures/checking2/224_derive_newtype_insufficient_params/Main.snap
---
source: tests-integration/tests/checking2/generated.rs
assertion_line: 28
expression: report
---
Terms

Types

Derived
derive Show

Diagnostics
error[DeriveInvalidArity]: Invalid arity for derive: expected 1, got 0
  --> 5:1..5:29
  |
5 | derive newtype instance Show
  | ^~~~~~~~~~~~~~~~~~~~~~~~~~~~
error[CannotUnify]: Cannot unify 'Type -> Constraint' with 'Constraint'
  --> 5:1..5:29
  |
5 | derive newtype instance Show
  | ^~~~~~~~~~~~~~~~~~~~~~~~~~~~
